--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  background: #373b44;
+  background: -webkit-linear-gradient(to top, #373b44, #4286f4);
+  background: linear-gradient(to top, #373b44, #4286f4);
+  background-attachment: fixed;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 50%;
+  margin: 40px auto;
+  color: #FFFFFF;
+  background-color: #292f36;
+  box-shadow: 0 19px 38px rgba(19,19,19, 0.5);
 }
 
-.App-link {
-  color: #61dafb;
+.title{
+  font-size: 2.2rem;
+  padding: 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.result {
+  align-self: flex-end;
+  height: 7vh;
+  padding-right: 30px;
+  margin-top: 20px;
+  font-size: 2.0rem;
 }
+
+.calc_container {
+  display: flex;
+  width: 100%;
+  border-top: 1px solid #417fe5;
+}
+
+.values_container {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+
+/* .numbers {
+  display: flex;
+  flex-wrap: nowrap;
+  width: 100%;
+} */
+
+.numbers .number {
+  width: 33%;
+  padding: 20px;
+  color: #417fe5;
+  border: none;
+  border-bottom: 2px solid #ffffff1f;
+  border-right: 2px solid #ffffff1f;
+  background: none;
+}
+
+.numbers .number:hover {
+  color: #00a98f;
+  cursor: pointer;
+}
+
+.numbers .cero {
+  width: 100%;
+  padding: 20px;
+  color: #417fe5;
+  border: none;
+  border-right: 2px solid #ffffff1f;
+  background: none;
+  border-bottom: 2px solid #ffffff1f;
+}
+
+.numbers .cero:hover {
+  color: #00a98f;
+  cursor: pointer;
+}
+
+.operations__container {
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+}
+
+.operations__container .opeartions {
+  width: 100%;
+  padding: 20px;
+  color: #00a98f;
+  border: none;
+  border-bottom: 2px solid #ffffff1f;
+  background: none;
+}
+
+.operations__container .opeartions:hover, 
+.operations__container .lastBox:hover, 
+.numbers .lastBox:hover {
+  color: #417fe5;
+  cursor: pointer;
+}
+
+.operations__container .lastBox,
+.numbers .lastBox {
+  width: 100%;
+  padding: 20px;
+  color: #00a98f;
+  border: none;
+  border-left: 2px solid #ffffff1f;
+  background: none;
+}
+
+/* .operations__container .lastBox {
+  border-bottom: none;
+}
+
+.operations__container .lastBox {
+  border-bottom: 2px solid #ffffff1f;
+  border-bottom: none;
+} */
